# EasyWin32

./: CMakeLists.txt
doc/gettingStarted/: helloworldExample.md
include/: EApplication.hpp  ENode.hpp  EWidget.hpp  EWindow.hpp  EasyWin32.hpp  EventEmitter.hpp  types.hpp
include/EasyWin32/: EApplication.hpp  ELayout.hpp  EWindow.hpp  EasyWin32.hpp  types.hpp  var.hpp
src/: EApplication.cpp  ENode.cpp  EWindow.cpp  EasyWin32.cpp  EventEmitter.cpp  main.cpp
src/EasyWin32/: EApplication.cpp  ELayout.cpp  EWidget.cpp  EWindow.cpp  EasyWin32.cpp
